--- a/src/components/common/layout/Layout.scss
+++ b/src/components/common/layout/Layout.scss
@@ -7,10 +7,14 @@
 	transition: opacity 1s, transform 1s;
 
 	h1 {
-		font-size: 4rem;
+		font-size: 0;
 		font-weight: normal;
 		opacity: 0.5;
 		margin-bottom: 10px;
+
+		span {
+			font-size: 5rem;
+		}
 	}
 	.bar {
 		width: 50px;
